Media Query: Port for 4k display

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,6 @@
 body {
   font-family: var(--ff-main);
   font-size: var(--fs-main);
-  background-color: #fffff0;
+  background-color: #ffffff;
   padding: 4rem;
 }
