Responsive-Bento-Grid: Completed

--- a/src/index.css
+++ b/src/index.css
@@ -19,5 +19,5 @@ body {
   font-family: var(--ff-main);
   font-size: var(--fs-main);
   background-color: #ffffff;
-  padding: 4rem;
+  padding: clamp(2rem, 3.333vw, 5rem);
 }
